# prairiedog

./: ProjectHome.md  README  client.launch  multi_andrews.launch  multi_robot.launch  prairiedog.launch  repository.debs  robot.launch  server.launch  server_andrews.launch  stack.xml
base_planner_cu/: CMakeLists.txt  manifest.xml  package.xml
base_planner_cu/include/: mappathdouble.c
base_planner_cu/src/: base_planner_cu.cpp
branches/otte-experimental/: client_large.launch  multi_andrews.launch  multi_robot.launch  server.launch  server_andrews.launch
branches/otte-experimental/base_planner_cu/: CMakeLists.txt  mainpage.dox  manifest.xml
branches/otte-experimental/hokuyo_listener_cu/: CMakeLists.txt  manifest.xml
branches/otte-experimental/intercom_cu/: CMakeLists.txt  config.xml
branches/otte-experimental/irobot_create_cu/: manifest.xml
branches/otte-experimental/irobot_create_rustic/: CMakeLists.txt  mainpage.dox  test_irobot_create.launch
branches/otte-experimental/localization_cu/: CMakeLists.txt  mainpage.dox
branches/otte-experimental/mapper_cu/: CMakeLists.txt  manifest.xml
branches/otte-experimental/multi_robot_planner_cu/: CMakeLists.txt  ad-hoc-config.sh  lab.txt  manifest.xml
branches/otte-experimental/nav_view_cu/: CMakeLists.txt
branches/otte-experimental/stargazer_cu/: CMakeLists.txt  andrews_3.xml  command_sets.xml  mainpage.dox  pseudolites.xml
branches/otte-experimental/tagmapper_cu/: CMakeLists.txt  manifest.xml  new.xml  pseudolites.xml
branches/otte-experimental/udev_config/: README
branches/otte-experimental/visualization_cu/: CMakeLists.txt  manifest.xml
cmd_line_control_cu/: CMakeLists.txt
cmd_line_control_cu/src/: cmd_line_control_cu.cpp
examples/manual_remote_exploration/: command_center.launch  exploration.launch
gencam_cu/: CMakeLists.txt  manifest.xml
gencam_cu/src/: CMakeLists.txt  gencam_cu.cpp
goal_server_cu/: CMakeLists.txt
goal_server_cu/src/: goal_server_cu.cpp
hokuyo_listener_cu/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
hokuyo_listener_cu/msg/: PointCloudWithOrigin.msg
hokuyo_listener_cu/src/: hokuyo_listener_cu.cpp
ignore/cmd_line_control_cu/: CMakeLists.txt  mainpage.dox  manifest.xml
ignore/cmd_line_control_cu/src/: cmd_line_control_cu.cpp
ignore/examples/manual_remote_exploration/: exploration.launch
ignore/gencam_cu/: manifest.xml
ignore/gencam_cu/src/: gencam_cu.cpp
ignore/goal_server_cu/: manifest.xml
ignore/goal_server_cu/src/: goal_server_cu.cpp
ignore/intercom_cu/: mainpage.dox
ignore/intercom_cu/include/: ros_to_buffer.cpp
ignore/intercom_cu/msg/: Path_CU_ID.msg  PointCloudWithOrigin_CU_ID.msg  PointCloud_CU_ID.msg  PoseStamped_CU_ID.msg
ignore/irobot_create_cu/: manifest.xml
ignore/irobot_create_cu/src/: disp.cpp
ignore/nav_view_cu/: manifest.xml
ignore/udev_config/: udev_config.sh  udev_config_stargazer.sh
ignore/visualization_cu/: mainpage.dox
ignore/visualization_cu/src/: visualization_cu.cpp
intercom_cu/: config.xml  manifest.xml
intercom_cu/include/: ros_to_buffer.cpp
intercom_cu/msg/: PolygonArray_CU_ID.msg  Pose2D_CU_ID.msg
intercom_cu/src/: intercom_cu.cpp
irobot_create/: manifest.xml
irobot_create/src/irobot_create_controller/: controller.cpp
irobot_create/src/irobot_create_gui/: slider_2d.cpp
irobot_create_cu/: CMakeLists.txt  mainpage.dox  manifest.xml
irobot_create_cu/src/: disp.h  irobot_create_cu.cpp
irobot_create_rustic/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
irobot_create_rustic/src/irobot_create_controller/: controller.cpp
irobot_create_rustic/src/irobot_create_driver/: driver.cpp
irobot_create_rustic/src/irobot_create_examples/: listener_test.cpp  mario_song.cpp
irobot_create_rustic/src/irobot_create_gui/: controller_gui.cpp
launcher_cu/: CMakeLists.txt  package.xml
launcher_cu/launch/: client_large.launch  command_center.launch  multi_robot.launch  prairiedog.launch  robot.launch
localization_cu/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
localization_cu/src/: localization_cu.cpp
mapper_cu/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
mapper_cu/src/: mapper_cu.cpp
multi_robot_planner_cu/: CMakeLists.txt  ad-hoc-config.sh  andrews3.txt  andrews3big.txt  andrews_2.txt  lab.txt  mainpage.dox
multi_robot_planner_cu/include/: Cspace.cpp  Cspace.h  MultiAgentSolution.cpp  MultiAgentSolution.h  MultiRobotComs.cpp  MultiRobotComs.h  MultiRobotWorkspace.cpp  MultiRobotWorkspace.h  NavScene.cpp  Workspace.cpp  helper_functions.cpp  helper_functions.h  kd_tree.cpp
multi_robot_planner_cu/msg/: TeamList_CU.msg
multi_robot_planner_cu/src/: multi_robot_planner_cu.cpp
nav_view_cu/: mainpage.dox
prairiedog/: CMakeLists.txt  package.xml
stargazer_cu/: CMakeLists.txt  andrews_3.xml  command_sets.xml  example1.xml  example2.xml  mainpage.dox  package.xml  pseudolites.xml
stargazer_cu/launch/: stargazer.launch
stargazer_cu/src/: port_setup.h  serial_communication.cpp  serial_communication.h  stargazer_communication.cpp  stargazer_communication.h  stargazer_cu.cpp  stargazer_cu_node.cpp  test.cpp  test1.cpp  test_2.cpp  test_3.cpp
tagmapper_cu/: CMakeLists.txt  mainpage.dox  package.xml
trunk/: CMakeLists.txt  prairiedog.launch  set_rosip.sh  stack.xml
trunk/base_planner_cu/: mainpage.dox
trunk/cmd_line_control_cu/: .build_version  CMakeLists.txt
trunk/gencam_cu/: CMakeLists.txt
trunk/goal_server_cu/: CMakeLists.txt  mainpage.dox
trunk/hokuyo_listener_cu/: mainpage.dox
trunk/intercom_cu/: CMakeLists.txt  config.xml  manifest.xml
trunk/irobot_create_cu/: CMakeLists.txt  mainpage.dox
trunk/localization_cu/: CMakeLists.txt  mainpage.dox  manifest.xml
trunk/mapper_cu/: CMakeLists.txt  mainpage.dox
trunk/nav_view_cu/: CMakeLists.txt  mainpage.dox
trunk/stargazer_cu/: CMakeLists.txt  andrews_3.xml  command_sets.xml  mainpage.dox  manifest.xml  pseudolites.xml
trunk/visualization_cu/: CMakeLists.txt  mainpage.dox  manifest.xml
visualization_cu/: CMakeLists.txt  mainpage.dox
visualization_cu/src/: visualization_cu.cpp
(+76 files in other folders)
