<?xml version="1.0"?>  
<package>
  <name>hokuyo_listener_cu</name>
  <version>0.1.0</version>
  <description>hokuyo_listener_cu</description>
  <maintainer email="sohail.mughal@uni-rostock.de">Sohail Mughal</maintainer>
  <license>BSD</license>
  <url type="website">http://correll.cs.colorado.edu/pmwiki/index.php/Main/PrairieDog</url>
  <author email="Michael.Otte@example.com">Michael Otte</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>hokuyo_node</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>message_generation</build_depend>  
  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>hokuyo_node</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>message_runtime</run_depend>

</package>


