<?xml version="1.0"?>
<package>
  <name>irobot_create_rustic</name>
  <version>0.1.0</version>

  <description>
     Brown University V 104 of irobot create, 2009.
     By Gheric Speiginer and Keenan Black

     Modified by Michael Otte at University of Colorado 2010 to work with ROS V 1.0 under the name irobot_create_rustic
  </description>
  <maintainer email="sohail.mughal@uni-rostock.de">Sohail Mughal</maintainer>
  <license>BSD</license>
  <author email="Michael.Otte@example.com">Michael Otte</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>


