<?xml version="1.0"?>
<package>
  <name>prairiedog</name>
  <version>0.1.0</version>
  <description>
    Prairiedog robot platform  
    This includes all of the CU Boulder prairiedog packages.
  </description>

  <maintainer email="sohail.mughal@uni-rostock.de">Sohail Mughal</maintainer>
  <license>GPLv3</license>

  <url type="website">http://correll.cs.colorado.edu/pmwiki/index.php/Main/PrairieDog</url> 

  <author email="Michael.Otte@example.com">Michael Otte</author> 

  <buildtool_depend>catkin</buildtool_depend>
<!--  <build_depend>common_msgs</build_depend>
  <build_depend>image_transport_plugins</build_depend>
  <build_depend>ros-drivers</build_depend>
  <run_depend>common_msgs</run_depend>
  <run_depend>image_transport_plugins</run_depend>
  <run_depend>ros-drivers</run_depend>-->

  <export>
    <metapackage/>
  </export>
</package>
