<?xml version="1.0"?>
<package>
  <name>tagmapper_cu</name>
  <version>0.1.0</version>
  <description>tagmapper_cu</description>
  <maintainer email="sohail.mughal@uni-rostock.de">Sohail Mughal</maintainer>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/tagmapper_cu</url>
  <author email="Michael.Otte@example.com">Michael Otte</author>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>stargazer_cu</build_depend>
  <build_depend>localizatio_cu</build_depend>
  <build_depend>irobot_create_rustic</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>stargazer_cu</run_depend>
  <run_depend>localizatio_cu</run_depend>
  <run_depend>irobot_create_rustic</run_depend>

</package>


